# CPP_implementations

./: CMakeLists.txt  file.txt  main.cpp  myShell
Concurrency/C#/: Concurrency.sln
Concurrency/C#/Concurrency/: Concurrency.csproj  ConditionVariable.cs  Conveyor.cs  ConveyorConsumer.cs  ConveyorContributor.cs  ConveyorQueue.cs  Program.cs  StreamReaderUtility.cs  TextDataController.cs
Concurrency/C#/Concurrency/Properties/: AssemblyInfo.cs
Concurrency/Java/: runconfig.txt  runconfig_conveyor.txt
Concurrency/Java/src/com/example/conveyor/: BlockReader.java  Manager.java  Merger.java  WordCounter.java
Concurrency/Java/src/com/example/future/: Future_Callable.java
Concurrency/Java/src/com/example/threads/: Threads.java
Concurrency/Python/: async_version.py  aux_tools.py  clean_words.py  futures_python.py  input_data  input_data_1  multiprocessing_python.py  multiprocessing_queue.py  raw_processes.py  raw_threads.py  seq_1.py
Concurrency/Research/: CppRawThreads100KB.txt  PythonAsync100KB.txt  PythonAsync10MB.txt  PythonAsync1MB.txt  PythonFutures100KB.txt  PythonFutures10MB.txt  PythonFutures1MB.txt  PythonMultiprocessing100KB.txt  PythonMultiprocessing10MB.txt  PythonMultiprocessing1MB.txt  QtAsync100KB.txt  QtAsync10MB.txt  QtAsync1MB.txt  QtRawThreads100KB.txt  QtRawThreads10MB.txt  QtRawThreads1MB.txt
Concurrency/cpp_qt/: CMakeLists.txt  QtConcurrentP.cpp  QtConditionalQueue.cpp  QtRawThreads.cpp  aux_tools.hpp  q_clean_words.cpp  q_clean_words.hpp  q_seq_etalon.cpp
Concurrency/cpp_qt/Multithreading/: py_script.py
Concurrency/cpp_qt/QtConcurrent-run/: bsh.sh  bsh1.sh
Concurrency/cxx/: Async.cpp  CMakeLists.txt  ConditionalQueue.cpp  FindPAPI.cmake  FindPCM.cmake  FuturePromise.cpp  RawThreads.cpp  aux_tools.cpp  aux_tools.hpp  clean_words.cpp  clean_words.hpp  data_input.txt  data_input_conc.txt  measurements.cpp  measurements.hpp  runningWord.sh  seq_etalon.cpp
ConsumerProducerdequeNumbers/: CMakeLists.txt
CppMultithreadingTasks/: PrimeNUmbersAsync  PrimeNumbers.cpp  README.md  aProg.cpp  gProg.cpp  vectorMax.cpp  vectorSum.cpp
Grep4LinuxShell/: CMakeLists.txt  main.cpp  mgrep  test.txt
Shell/: main.cpp
